# MessageForwardingBot

./: Python version check.bat  README.md  bot_start.bat  config.json  install_dependencies.bat  pyproject.toml  python-3.12.2-amd64.txt
message_forwarding_bot/: __init__.py  __main__.py  bot.py  message_forwarding_bot.session
message_forwarding_bot/modules/: __init__.py  main.py
message_forwarding_bot/utils/: loader.py  telegram.py
